<resources>
    <string name="app_name">NR Project</string>
    <string name="angka_1">Angka 1</string>
    <string name="angka_2">Angka 2</string>
    <string name="hitung">Hitung</string>
    <string name="hasil">Hasil :\u0020</string>
    <string name="tv_warning">Masukkan angka dengan benar!</string>
    <string name="ok">OK</string>
    <string name="pindah_activity">Pindah Activity</string>
    <string name="pindah_activity_dengan_data">Pindah Activity dengan data</string>
    <string name="txt_implicit">Implicit Intent</string>
    <string name="data_diterima">Data Diterima</string>
    <string name="banyak_gambar">2 Foto</string>
    <string name="nominal_harga">Rp 700.000 (64 GB)</string>
    <string name="deskripsi">Menemukan harga terbaik untuk iPhone SE bukanlah hal yang mudah. Di sini Anda akan menemukan tempat untuk membeli iPhone SE dengan harga terbaik. Harga terus dilacak di lebih dari 140 toko sehingga Anda dapat menemukan dealer terkemuka dengan harga terbaik</string>
    <string name="label_spesifikasi">Spesifikasi</string>
    <string name="label_alias">Alias</string>
    <string name="alias">iPhone Special Edition</string>
    <string name="label_rilis">Tahun Rilis</string>
    <string name="rilis">Maret 2016</string>
    <string name="label_layar">Layar</string>
    <string name="layar">4" IPS LCD\nRetina HD Display\n640 x 1136 px (16:9)\n326 ppi</string>
    <string name="label_processor">Processor</string>
    <string name="processor">Apple A9 Dual Core\n2x Twister 1.85 Ghz\n14 nm</string>
    <string name="label_grafis">Grafis</string>
    <string name="grafis">PowerVR GT7600 Six-Core</string>
    <string name="label_ram">RAM</string>
    <string name="ram">2 GB</string>
    <string name="label_antutu">Skor Antutu v8</string>
    <string name="antutu">176.000</string>
    <string name="btn_beli">Beli</string>
    <string name="recycler_view">Recycler View</string>
    <string name="iphone_se">iphone se</string>
    <string name="item_name" />
    <string name="detail" />
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="with_cardview">with Cardview</string>
    <string name="share">Share</string>
    <string name="favourite">Favourite</string>
    <string name="favorite">favorite</string>
</resources>